# viper

./: CMakeLists.txt
Include/Viper/: Column.hpp  CommitStatement.hpp  Conversions.hpp  CreateTableStatement.hpp  DeleteStatement.hpp  ExecuteException.hpp  FunctionTraits.hpp  InsertRangeStatement.hpp  RollbackStatement.hpp  Row.hpp  SelectClause.hpp  SelectStatement.hpp  StartTransactionStatement.hpp  Table.hpp  Transaction.hpp  UpdateStatement.hpp  UpsertStatement.hpp  Viper.hpp
Include/Viper/DataTypes/: BlobDataType.hpp  DataType.hpp  DataTypeVisitor.hpp  DataTypes.hpp  DateTimeDataType.hpp  FloatDataType.hpp  IntegerDataType.hpp  NativeToDataType.hpp  TextDataType.hpp  VarCharDataType.hpp
Include/Viper/Expressions/: Expression.hpp  Expressions.hpp  InfixOperator.hpp  LiteralExpression.hpp  MembershipOperator.hpp  NotExpression.hpp  SqlFunctions.hpp  SymbolExpression.hpp  VirtualExpression.hpp
Include/Viper/MySql/: Connection.hpp  DataTypeName.hpp  MySql.hpp  QueryBuilder.hpp
Include/Viper/Sqlite/: Connection.hpp  DataTypeName.hpp  QueryBuilder.hpp  Sqlite.hpp
Include/Viper/Sqlite3/: Connection.hpp  DataTypeName.hpp  QueryBuilder.hpp  Sqlite3.hpp
Tests/: CMakeLists.txt  setup.bat
Tests/Source/: RowTester.cpp  TableTester.cpp
Tests/Source/Expressions/: InfixOperatorTester.cpp  LiteralExpressionTester.cpp  NotExpressionTester.cpp  SymbolExpressionTester.cpp
Tests/Source/MySql/: DataTypeNameTester.cpp  QueryBuilderTester.cpp
Tests/Source/Sqlite/: DataTypeNameTester.cpp  QueryBuilderTester.cpp
Tests/Source/Sqlite3/: QueryBuilderTester.cpp
include/viper/: column.hpp  connect_exception.hpp  conversions.hpp  create_table.hpp  create_table_statement.hpp  execute_exception.hpp  function_traits.hpp  index.hpp  insert_range_statement.hpp  row.hpp  select_clause.hpp  select_statement.hpp  sql_data_type.hpp  table.hpp  utilities.hpp  viper.hpp
include/viper/data_types/: DataTypes.hpp  FloatDataType.hpp  VarCharDataType.hpp  data_type.hpp  data_type_visitor.hpp  data_types.hpp  float_data_type.hpp  integer_data_type.hpp  native_to_data_type.hpp  sql_data_type.hpp  varchar_data_type.hpp
include/viper/expressions/: expression.hpp  expressions.hpp  infix_operator.hpp  literal_expression.hpp  sql_functions.hpp  symbol_expression.hpp  virtual_expression.hpp
include/viper/sqlite/: connection.hpp  data_type_name.hpp  query_builder.hpp  sqlite.hpp
tests/: CMakeLists.txt
tests/source/: literal_expression_tester.cpp  symbol_expression_tester.cpp
tests/source/sqlite/: query_builder_tester.cpp
tests/viper_tester/: CMakeLists.txt
tests/viper_tester/source/: expressions_tester.cpp
