cmake_minimum_required(VERSION 3.28)
project(viper LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(MSVC)
  add_compile_options(/bigobj /external:anglebrackets /external:W0
    $<$<CONFIG:Release>:/GL> /MP /WX)
  add_compile_definitions(_CRT_SECURE_NO_DEPRECATE NOMINMAX
    _SCL_SECURE_NO_WARNINGS WIN32_LEAN_AND_MEAN _WIN32_WINNT=0x0501)
  add_link_options($<$<CONFIG:Release>:/LTCG> /SAFESEH:NO)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  add_compile_options(-g $<$<CONFIG:Release>:-DNDEBUG -O2>)
  if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
    add_compile_options(-fsized-deallocation)
  endif()
endif()
if(CYGWIN)
  add_compile_definitions(__USE_W32_SOCKETS)
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
  add_compile_options($<$<CONFIG:Release>:-pthreads>)
endif()
file(GLOB_RECURSE data_types_header_files ./Include/Viper/DataTypes/*.hpp)
source_group("Data Types" FILES ${data_types_header_files})
file(GLOB_RECURSE expressions_header_files ./Include/Viper/Expressions/*.hpp)
source_group("Expressions" FILES ${expressions_header_files})
file(GLOB_RECURSE mysql_header_files ./Include/Viper/MySql/*.hpp)
source_group("MySQL" FILES ${mysql_header_files})
file(GLOB_RECURSE sqlite_header_files ./Include/Viper/Sqlite3/*.hpp)
source_group("Sqlite3" FILES ${sqlite_header_files})
file(GLOB_RECURSE viper_header_files ./Include/Viper/*.hpp)
source_group("Viper" FILES ${viper_header_files})
file(GLOB header_files ${data_types_header_files} ${expressions_header_files}
  ${mysql_header_files} ${sqlite_header_files} ${viper_header_files})
add_library(viper STATIC ${header_files})
target_include_directories(viper PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Include")
set_source_files_properties(${header_files} PROPERTIES HEADER_FILE_ONLY TRUE)
set_target_properties(viper PROPERTIES LINKER_LANGUAGE CXX OUTPUT_NAME viper)
