cmake_minimum_required(VERSION 3.8)
project(viper_tester)

include_directories(./../Include)
include_directories(./ThirdParty/sqlite)
include_directories(./ThirdParty/mysql-connector-c-6.1.11-win32/include)
include_directories(./ThirdParty/Catch2/single_include)

if(MSVC)
  set(CMAKE_LIBRARY_FLAGS "/LTCG")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX /bigobj /std:c++17")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}  /ignore:4098")
  set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")
  add_definitions(-D_WIN32_WINNT=0x0501)
  add_definitions(-DWIN32_LEAN_AND_MEAN)
  add_definitions(-DNOMINMAX)
  add_definitions(-D_SCL_SECURE_NO_WARNINGS)
  add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
  add_definitions("/wd4355")
  add_definitions("/wd4503")
  add_definitions("/wd4091")
  add_definitions("/wd4297")
  add_definitions("/wd4005")
  add_definitions("/wd4275")
endif()
if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR
    ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_RELEASE} -O3 -DNDEBUG")
endif()
if(${CMAKE_SYSTEM_NAME} STREQUAL "SunOS")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_RELEASE} -pthreads")
endif()

file(GLOB source_files ./Source/*.cpp)
file(GLOB expressions_source_files ./Source/Expressions/*.cpp)
source_group("Source Files\\Expressions" FILES ${expressions_source_files})
file(GLOB mysql_source_files ./Source/MySql/*.cpp)
source_group("Source Files\\MySql" FILES ${mysql_source_files})
file(GLOB sqlite_source_files ./Source/Sqlite3/*.cpp)
source_group("Source Files\\Sqlite3" FILES ${sqlite_source_files})

add_executable(viper_tester ${source_files} ${expressions_source_files}
  ${mysql_source_files} ${sqlite_source_files})
target_link_libraries(viper_tester
  ./ThirdParty/sqlite/sqlite3)
if(MSVC)
target_link_libraries(viper_tester
  ./ThirdParty/mysql-connector-c-6.1.11-win32/lib/libmysql)
endif()
add_custom_command(TARGET viper_tester POST_BUILD COMMAND viper_tester)
