cmake_minimum_required(VERSION 3.28)
project(viper_tester LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
include_directories(./../Include)
include_directories(./ThirdParty/sqlite)
include_directories(./ThirdParty/mysql-connector-c-6.1.11-win32/include)
include_directories(./ThirdParty/Catch2/single_include)
if(MSVC)
  add_compile_options(/bigobj /external:anglebrackets /external:W0
    $<$<CONFIG:Release>:/GL> /MP /WX)
  add_compile_definitions(_CRT_SECURE_NO_DEPRECATE NOMINMAX
    _SCL_SECURE_NO_WARNINGS WIN32_LEAN_AND_MEAN _WIN32_WINNT=0x0501)
  add_link_options($<$<CONFIG:Release>:/LTCG> /SAFESEH:NO)
elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  add_compile_options(-g $<$<CONFIG:Release>:-DNDEBUG -O2>)
  if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
    add_compile_options(-fsized-deallocation)
  endif()
endif()
if(CYGWIN)
  add_compile_definitions(__USE_W32_SOCKETS)
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
  add_compile_options($<$<CONFIG:Release>:-pthreads>)
endif()
file(GLOB_RECURSE source_files ./Source/*.cpp)
file(GLOB_RECURSE expressions_source_files ./Source/Expressions/*.cpp)
source_group("Source Files\\Expressions" FILES ${expressions_source_files})
file(GLOB_RECURSE mysql_source_files ./Source/MySql/*.cpp)
source_group("Source Files\\MySql" FILES ${mysql_source_files})
file(GLOB_RECURSE sqlite_source_files ./Source/Sqlite3/*.cpp)
source_group("Source Files\\Sqlite3" FILES ${sqlite_source_files})
add_executable(viper_tester ${source_files} ${expressions_source_files}
  ${mysql_source_files} ${sqlite_source_files})
target_link_libraries(viper_tester ./ThirdParty/sqlite/sqlite3)
if(MSVC)
target_link_libraries(viper_tester
  ./ThirdParty/mysql-connector-c-6.1.11-win32/lib/libmysql)
endif()
add_custom_command(TARGET viper_tester POST_BUILD COMMAND viper_tester)
